# D-D-Sim

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
backend/: __init__.py
backend/api/: app.py  batch_jobs.py
backend/content/: __init__.py  attack_sequences.py  class_definitions.py  class_progressions.py  combat_actions.py  cunning_strike_definitions.py  enemies.py  feature_definitions.py  maneuver_definitions.py  monster_traits.py  player_loadouts.py  scenario_definitions.py  special_actions.py  spell_definitions.py
backend/engine/: __init__.py  constants.py  templates.py
docs/: AUDIT_RUNBOOK.md  CONTENT_BACKLOG.md  CR2_6_TONIGHT_MONSTER_WORKBOOK.md  MASTER_NOTES.md  PLAYER_CLASS_IMPLEMENTATION.md  SPELL_DEVELOPMENT.md  V4_ARCHITECTURE.md
docs/reference/: TrimmedSpellListV2.xlsx  srd_Creatures_Trimmed_V4.xlsx
scripts/: audit_common.py  audit_findings.py  cr2_6_pairOneMonsters.node.test.mjs  dev.ps1  freeze_baseline_report.py  investigate_barbarian_stall.py  investigate_smart_vs_dumb.py  review_python_goldens.py  run_audit_validation.py  run_barbarian_audit.py  run_class_audit_slices.py  run_code_health_audit.py  run_daily_housekeeping.py  run_fighter_audit.py  run_nightly_audit.py  run_party_battery.py  run_party_validation.py  run_pass2_stability.py  run_pass3_clarity.py  run_pc_tuning_sample.py  run_rogue_audit.py  run_scenario_audit.py  run_smart_logic_matrix.py  tuning_policy.py
src/: main.tsx  styles.css
src/engine/: ai.ts  constants.ts  helpers.ts  index.ts  rng.ts  rules.ts  (+3 more)
(+73 files in other folders)
